--- a/docs/source/quickstart.ipynb
+++ b/docs/source/quickstart.ipynb
@@ -80,7 +80,7 @@
         "\n",
         "We call `sp.init_SUEWS_pd` to initialise a SUEWS simulation and get two `pandas` objects (note: the following names CAN be customised and are NOT fixed to the examples shown here):\n",
         "\n",
-        "1. `ser_mod_cfg`: a `Seires` for model-wide specifications\n",
+        "1. `ser_mod_cfg`: a `Series` for model-wide specifications\n",
         "2. `df_state_init`: a `DataFrame` for grid-specific settings\n",
         "\nOnce loaded in, these objects CAN be modified and reused for conducting simulations that differ from the one configured via input files under the above `dir_start`."
       ],
