--- a/docs/source/tutorial/parallel-dask.ipynb
+++ b/docs/source/tutorial/parallel-dask.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "%%time\n",
-    "df_output,df_final=sp.run_suews_df(df_forcing.loc['2012 01'],df_init)"
+    "df_output,df_final=sp.run_supy(df_forcing.loc['2012 01'],df_init)"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "source": [
     "# define a grid level wrapper for supy\n",
     "def run_grid(grid):\n",
-    "    df_output,df_final=sp.run_suews_df(df_forcing.loc['2012 01'],df_init_multi.loc[[grid]])\n",
+    "    df_output,df_final=sp.run_supy(df_forcing.loc['2012 01'],df_init_multi.loc[[grid]])\n",
     "    return df_output,df_final"
    ]
   },
@@ -249,7 +249,7 @@
     "%%time\n",
     "# df_forcing_d=delayed(df_forcing.loc['2012 01'])\n",
     "df_forcing_d=df_forcing.loc['2012 01']\n",
-    "values = [delayed(sp.run_suews_df)(df_forcing_d,df_init_multi.loc[[grid]]) for grid in np.arange(5,9)]\n",
+    "values = [delayed(sp.run_supy)(df_forcing_d,df_init_multi.loc[[grid]]) for grid in np.arange(5,9)]\n",
     "results = compute(*values, scheduler='distributed')"
    ]
   },
