--- a/docs/source/tutorial/quickstart.ipynb
+++ b/docs/source/tutorial/quickstart.ipynb
@@ -93,10 +93,9 @@
    "source": [
     "### Model configuration\n",
     "\n",
-    "We call `sp.init_SUEWS_pd` to initialise a SUEWS simulation and get two `pandas` objects (note: the following names CAN be customised and are NOT fixed to the examples shown here):\n",
+    "We call `sp.init_supy_df` to initialise a SUEWS simulation and get two `pandas` objects (note: the following names CAN be customised and are NOT fixed to the examples shown here):\n",
     "\n",
-    "1. `ser_mod_cfg`: a `Series` for model-wide specifications\n",
-    "2. `df_state_init`: a `DataFrame` for grid-specific settings\n",
+    " `df_state_init`: a `DataFrame` for grid-specific settings\n",
     "\n",
     "Once loaded in, these objects CAN be modified and reused for conducting simulations that differ from the one configured via input files under the above `dir_start`."
    ]
@@ -113,85 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "ser_mod_cfg, df_state_init = sp.init_SUEWS_pd(path_runcontrol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "A sample `ser_mod_cfg` looks like below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "inputHidden": false,
-    "outputHidden": false,
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "aerodynamicresistancemethod            2\n",
-       "evapmethod                             2\n",
-       "laicalcyes                             1\n",
-       "veg_type                               1\n",
-       "diagnose                               0\n",
-       "diagqn                                 0\n",
-       "diagqs                                 0\n",
-       "cbluse                                 0\n",
-       "disaggmethod                           1\n",
-       "disaggmethodestm                       1\n",
-       "emissionsmethod                        2\n",
-       "filecode                              Kc\n",
-       "fileinputpath                   ./Input/\n",
-       "fileoutputpath                 ./Output/\n",
-       "kdownzen                               0\n",
-       "keeptstepfilesin                       0\n",
-       "keeptstepfilesout                      0\n",
-       "multipleestmfiles                      0\n",
-       "multipleinitfiles                      0\n",
-       "multiplemetfiles                       0\n",
-       "ncmode                                 0\n",
-       "ncol                                   1\n",
-       "netradiationmethod                     3\n",
-       "nrow                                   1\n",
-       "ohmincqf                               0\n",
-       "raindisaggmethod                     100\n",
-       "resolutionfilesin                   3600\n",
-       "resolutionfilesinestm               3600\n",
-       "resolutionfilesout                  3600\n",
-       "roughlenheatmethod                     2\n",
-       "roughlenmommethod                      2\n",
-       "smdmethod                              0\n",
-       "snowuse                                0\n",
-       "solweiguse                             0\n",
-       "stabilitymethod                        3\n",
-       "storageheatmethod                      1\n",
-       "suppresswarnings                       1\n",
-       "tstep                                300\n",
-       "waterusemethod                         0\n",
-       "writeoutoption                         2\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ser_mod_cfg"
+    "df_state_init = sp.init_supy_df(path_runcontrol)"
    ]
   },
   {
@@ -378,7 +299,7 @@
    "outputs": [],
    "source": [
     "grid = df_state_init.index[0]\n",
-    "df_forcing = sp.load_SUEWS_Forcing_df_grid(path_runcontrol, grid)"
+    "df_forcing = sp.load_forcing_grid(path_runcontrol, grid)"
    ]
   },
   {
@@ -400,7 +321,7 @@
     }
    },
    "source": [
-    "Once met-forcing (via `df_forcing`) and initial conditions (via `df_state_init`) are loaded in, we call `sp.run_suews_df` to conduct a SUEWS simulation, which will return two `pandas` `DataFrame`s: `df_output` and `df_state`."
+    "Once met-forcing (via `df_forcing`) and initial conditions (via `df_state_init`) are loaded in, we call `sp.run_supy` to conduct a SUEWS simulation, which will return two `pandas` `DataFrame`s: `df_output` and `df_state`."
    ]
   },
   {
@@ -415,7 +336,7 @@
    },
    "outputs": [],
    "source": [
-    "df_output, df_state = sp.run_suews_df(df_forcing, df_state_init)"
+    "df_output, df_state = sp.run_supy(df_forcing, df_state_init)"
    ]
   },
   {
@@ -474,7 +395,7 @@
     "\n",
     "`df_state` is a `DataFrame` for holding:\n",
     "    \n",
-    "   1. all model states if `save_state` is set to `True` when calling `sp.run_suews_df` and `supy` may run significantly slower for a large simulation;\n",
+    "   1. all model states if `save_state` is set to `True` when calling `sp.run_supy` and `supy` may run significantly slower for a large simulation;\n",
     "   2. or, only the final state if `save_state` is set to `False` (the default setting) in which mode `supy` has a similar performance as the standalone compiled SUEWS executable.\n",
     "\n",
     "Entries in `df_state` have the same data structure as `df_state_init` and can thus be used for other SUEWS simulations staring at the timestamp as in `df_state`."
@@ -1602,7 +1523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   },
   "nteract": {
    "version": "0.11.9"
