--- a/docs/source/data-structure/supy-io.ipynb
+++ b/docs/source/data-structure/supy-io.ipynb
@@ -9,13 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[test-link-object: ah_slope_cooling](df_state.rst#cmdoption-arg-ah-slope-cooling)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "nbsphinx-toctree": {
      "hidden": true,
@@ -23,7 +16,74 @@
     }
    },
    "source": [
-    "[model state variables](df_state.rst)"
+    "[Model state variables](df_state.rst)\n",
+    "[Forcing variables](df_forcing.rst)\n",
+    "[Output variables](df_output.rst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `df_state_init`: model initial states"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `df_forcing`: forcing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `df_state_final`: model final states"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `df_output`: model output results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### `df_state_init`: model initial state data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[test-link-object: ah_slope_cooling](df_state.rst#cmdoption-arg-ah-slope-cooling)"
    ]
   },
   {
@@ -71,6 +131,7 @@
  ],
  "metadata": {
   "celltoolbar": "Edit Metadata",
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -86,7 +147,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
