multiple docs improvements: now docs in rough shape

--- a/docs/source/tutorial/quickstart.ipynb
+++ b/docs/source/tutorial/quickstart.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. _quickstart:"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,7 +21,7 @@
     "2. [run SUEWS simulation](#Run-SUEWS-simulations)\n",
     "3. [examine SUEWS results](#Examine-SUEWS-results)\n",
     "\n",
-    "More advanced use of `supy` are available in the [tutorials](tutorial)\n",
+    "More advanced use of `supy` are available in the [tutorials](./tutorial.rst#tutorials)\n",
     "\n",
     "Before start, we need to load the following necessary packages."
    ]
@@ -59,7 +68,7 @@
    "source": [
     "### Model configuration\n",
     "\n",
-    "We call `sp.init_supy_df` to initialise a SUEWS simulation and get two `pandas` objects (note: the following names CAN be customised and are NOT fixed to the examples shown here):\n",
+    "We call `sp.init_supy` to initialise a SUEWS simulation and get two `pandas` objects (note: the following names CAN be customised and are NOT fixed to the examples shown here):\n",
     "\n",
     "`df_state_init`: a `DataFrame` for grid-specific settings\n",
     "\n",
@@ -72,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_state_init = sp.init_supy_df(path_runcontrol)\n"
+    "df_state_init = sp.init_supy(path_runcontrol)\n"
    ]
   },
   {
@@ -1330,7 +1339,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "file_extension": ".py",
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1352,6 +1363,19 @@
   "name": "python",
   "npconvert_exporter": "python",
   "pygments_lexer": "ipython3",
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
   "varInspector": {
    "cols": {
     "lenName": 16,
