--- a/docs/source/version-history/20181215.rst
+++ b/docs/source/version-history/20181215.rst
@@ -1,10 +1,7 @@
+.. _ver_2018.12.15:
 
-.. _new_latest:
-
-.. _new_2018.12:
-
-Version 2018.12.15 (preview release in December 2018)
-======================================================
+Version 2018.12.15 (internal test release in December 2018)
+===========================================================
 
 
 - **New**
