--- a/docs/proc_var_info/gen_rst.ipynb
+++ b/docs/proc_var_info/gen_rst.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:50:56.311587Z",
+     "start_time": "2018-12-31T14:50:55.736327Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import supy as sp\n",
+    "import os\n",
+    "try:\n",
+    "    os.chdir(os.path.join(os.getcwd(), 'docs/proc_var_info'))\n",
+    "    print(os.getcwd())\n",
+    "except:\n",
+    "    pass\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:51:04.865238Z",
+     "start_time": "2018-12-31T14:50:56.313101Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from gen_df_state_csv import (gen_df_state, list_table, set_initcond,\n",
+    "                              set_runcontrol, set_input_runcontrol, gen_df_dim)\n",
+    "from gen_df_forcing_output_csv import gen_df_forcing, gen_df_output"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,98 +48,255 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generate dataframes for variable groups"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-28T17:02:55.485590Z",
-     "start_time": "2018-12-28T17:02:55.207298Z"
+     "end_time": "2018-12-31T14:56:39.652441Z",
+     "start_time": "2018-12-31T14:56:22.694798Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_state = gen_df_state(\n",
+    "    list_table, set_initcond, set_runcontrol, set_input_runcontrol)\n",
+    "df_state.to_csv('df_state.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:53:42.029098Z",
+     "start_time": "2018-12-31T14:53:21.969727Z"
     }
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "File b'./df_var_supy.csv' does not exist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-f9dc3f0ee91d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# load processed csv of df_state info\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf_var_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./df_var_supy.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, skipfooter, doublequote, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    676\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 678\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    679\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    680\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    438\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 440\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    785\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'has_index_names'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    786\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 787\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    788\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    789\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1012\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1013\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'c'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1014\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1015\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1016\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'python'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1706\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'usecols'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1707\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1708\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1709\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1710\u001b[0m         \u001b[0mpassed_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnames\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: File b'./df_var_supy.csv' does not exist"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/var/folders/4d/jj1kyw857kz3rrjnzsrt7cww0000gn/T/tmpxkq2shza'. \n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "# load processed csv of df_state info\n",
-    "df_var_info = pd.read_csv('./df_var_supy.csv')\n"
+    "%load_ext snakeviz\n",
+    "%snakeviz gen_df_state(list_table, set_initcond, set_runcontrol, set_input_runcontrol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:51:32.572362Z",
+     "start_time": "2018-12-31T14:51:32.104367Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# generate option string for rst option file\n",
-    "def gen_opt_str(ser_rec):\n",
+    "df_forcing = gen_df_forcing('SSss_YYYY_data_tt.csv')\n",
+    "df_forcing.to_csv('df_forcing.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:51:33.992690Z",
+     "start_time": "2018-12-31T14:51:32.574459Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_output = gen_df_output(\n",
+    "    [\n",
+    "        'SSss_YYYY_SUEWS_TT.csv',\n",
+    "        'SSss_DailyState.csv',\n",
+    "        'SSss_YYYY_snow_TT.csv',\n",
+    "    ],\n",
+    ")\n",
+    "df_output.to_csv('df_output.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## generate option string for rst option file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:51:34.013479Z",
+     "start_time": "2018-12-31T14:51:33.994262Z"
+    },
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def gen_opt_str(ser_rec:pd.Series)->str:\n",
+    "    '''generate rst option string\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ser_rec : pd.Series\n",
+    "        record for specifications\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        rst string\n",
+    "    '''\n",
     "\n",
-    "    name = ser_rec['variable']\n",
-    "    desc = ser_rec['Description']\n",
-    "    vars = ser_rec['SUEWS-related variables']\n",
-    "    dim = ser_rec['Dimensionality']\n",
-    "    remark = ser_rec['Dimensionality Remarks']\n",
-    "    str_opt = '''\n",
-    ".. option:: {name}\n",
-    "\n",
-    "    :Description:\n",
-    "        {desc}\n",
-    "    :SUEWS-related variables:\n",
-    "        {vars}\n",
-    "    :Dimensionality:\n",
-    "        {dim}\n",
-    "    :Dimensionality remarks:\n",
-    "        {remark}'''.format(\n",
-    "        name=name,\n",
-    "        desc=desc,\n",
-    "        vars=vars,\n",
-    "        dim=dim,\n",
-    "        remark=remark,\n",
-    "    )\n",
+    "    name = ser_rec.name\n",
+    "    indent=r'    '\n",
+    "    str_opt = f'.. option:: {name}'+'\\n\\n'\n",
+    "    for spec in ser_rec.sort_index().index:\n",
+    "        str_opt += indent+f':{spec}:'+'\\n'\n",
+    "        spec_content = ser_rec[spec]\n",
+    "        str_opt += indent+indent+f'{spec_content}'+'\\n'\n",
     "    return str_opt\n",
     "\n",
     "\n",
-    "gen_opt_str(df_var_info.iloc[10])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df_var_info['rst'] = df_var_info.apply(gen_opt_str, axis=1)\n",
-    "df_var_info = df_var_info.sort_values('variable').reset_index(drop=True)\n",
-    "rst_txt = '\\n\\n'.join(df_var_info.rst)\n",
-    "# print()\n",
-    "with open('df_state.rst', 'w') as f:\n",
-    "    print(rst_txt, file=f)\n",
-    "\n",
-    "df_var_info.tail()\n",
+    "# xx=df_var_info.set_index('variable').iloc[10]\n",
+    "# print(gen_opt_str(xx))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:52:10.271692Z",
+     "start_time": "2018-12-31T14:52:10.248826Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def gen_rst(path_rst, path_df_csv, rst_title):\n",
+    "    df_var_info = pd.read_csv(path_df_csv).set_index('variable')\n",
+    "    df_var_info['rst'] = df_var_info.copy().apply(gen_opt_str, axis=1)\n",
+    "    df_var_info = df_var_info.sort_index().reset_index(drop=True)\n",
+    "    rst_txt_x = '\\n\\n'.join(df_var_info.rst)\n",
+    "    rst_txt = '\\n'.join([rst_title, rst_txt_x])\n",
+    "    with open(path_rst, 'w') as f:\n",
+    "        print(rst_txt, file=f)\n",
+    "\n",
+    "    return path_rst\n",
+    "\n",
+    "\n",
+    "# gen_rst(\n",
+    "#     '../source/data-structure/test.rst', \n",
+    "#     df_state,\n",
+    "#     'xx\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:52:13.336015Z",
+     "start_time": "2018-12-31T14:52:13.313515Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'path_rst': PosixPath('../source/data-structure/df_state.rst'), 'path_df_csv': 'df_state.csv', 'rst_title': '\\n.. _df_state_options:\\n\\n`df_state` variables\\n============================\\n\\n'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_rst_base = Path('../source/data-structure/')\n",
+    "\n",
+    "\n",
+    "def gen_group_dict(group):\n",
+    "    rst_title = f'''\n",
+    ".. _df_{group}_options:\n",
+    "\n",
+    "`df_{group}` variables\n",
+    "============================\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "    dict_group = {\n",
+    "        'path_rst': path_rst_base/('df_'+group+'.rst'),\n",
+    "        'path_df_csv': 'df_'+group+'.csv',\n",
+    "        'rst_title': rst_title,\n",
+    "        }\n",
+    "\n",
+    "    return dict_group\n",
+    "\n",
+    "\n",
+    "print(gen_group_dict('state'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:52:14.488566Z",
+     "start_time": "2018-12-31T14:52:14.467434Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dict_rst_out = {group:gen_group_dict(group)\n",
+    "                for group in ['state', 'forcing', 'output']}\n",
+    "# dict_rst_out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-31T14:52:22.776791Z",
+     "start_time": "2018-12-31T14:52:22.670143Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../source/data-structure/df_state.rst\n",
+      "../source/data-structure/df_forcing.rst\n",
+      "../source/data-structure/df_output.rst\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in dict_rst_out:\n",
+    "    print(gen_rst(**dict_rst_out[group]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +337,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
