--- a/docs/source/version-history/20181215.rst
+++ b/docs/source/version-history/20181215.rst
@@ -1,4 +1,4 @@
-.. _ver_2018.12.15:
+.. _new_2018.12.15:
 
 Version 2018.12.15 (internal test release in December 2018)
 ===========================================================
