modified script for faster docs build

--- a/docs/source/data-structure/supy-io.ipynb
+++ b/docs/source/data-structure/supy-io.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-31T20:10:35.867262Z",
-     "start_time": "2018-12-31T20:09:42.515737Z"
+     "end_time": "2019-01-01T21:56:44.650428Z",
+     "start_time": "2019-01-01T21:56:42.118948Z"
     }
    },
    "outputs": [],
    "source": [
     "import supy as sp\n",
     "df_state_init, df_forcing = sp.load_SampleData()\n",
-    "df_output, df_state_final = sp.run_supy(df_forcing, df_state_init)"
+    "df_output, df_state_final = sp.run_supy(df_forcing.iloc[:288], df_state_init)"
    ]
   },
   {
@@ -46,24 +46,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-31T20:09:27.576015Z",
-     "start_time": "2018-12-31T20:09:27.488368Z"
+     "end_time": "2019-01-01T21:56:50.395748Z",
+     "start_time": "2019-01-01T21:56:50.366697Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_state_init' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a255c5de68cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_state_init\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_state_init' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>var</th>\n",
+       "      <th>aerodynamicresistancemethod</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">ah_min</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">ah_slope_cooling</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">ah_slope_heating</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">ahprof_24hr</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"7\" halign=\"left\">wuprofm_24hr</th>\n",
+       "      <th>z</th>\n",
+       "      <th>z0m_in</th>\n",
+       "      <th>zdm_in</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ind_dim</th>\n",
+       "      <th>0</th>\n",
+       "      <th>(0,)</th>\n",
+       "      <th>(1,)</th>\n",
+       "      <th>(0,)</th>\n",
+       "      <th>(1,)</th>\n",
+       "      <th>(0,)</th>\n",
+       "      <th>(1,)</th>\n",
+       "      <th>(0, 0)</th>\n",
+       "      <th>(0, 1)</th>\n",
+       "      <th>(1, 0)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>(20, 1)</th>\n",
+       "      <th>(21, 0)</th>\n",
+       "      <th>(21, 1)</th>\n",
+       "      <th>(22, 0)</th>\n",
+       "      <th>(22, 1)</th>\n",
+       "      <th>(23, 0)</th>\n",
+       "      <th>(23, 1)</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>grid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 1200 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "var     aerodynamicresistancemethod ah_min       ah_slope_cooling       \\\n",
+       "ind_dim                           0   (0,)  (1,)             (0,) (1,)   \n",
+       "grid                                                                     \n",
+       "1                               2.0   15.0  15.0              2.7  2.7   \n",
+       "\n",
+       "var     ah_slope_heating      ahprof_24hr                ...   wuprofm_24hr  \\\n",
+       "ind_dim             (0,) (1,)      (0, 0) (0, 1) (1, 0)  ...        (20, 1)   \n",
+       "grid                                                     ...                  \n",
+       "1                    2.7  2.7        0.57   0.65   0.45  ...         -999.0   \n",
+       "\n",
+       "var                                                         z z0m_in zdm_in  \n",
+       "ind_dim (21, 0) (21, 1) (22, 0) (22, 1) (23, 0) (23, 1)     0      0      0  \n",
+       "grid                                                                         \n",
+       "1        -999.0  -999.0  -999.0  -999.0  -999.0  -999.0  10.0   0.01    0.2  \n",
+       "\n",
+       "[1 rows x 1200 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -79,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-29T15:58:36.312889Z",
-     "start_time": "2018-12-29T15:58:36.274548Z"
+     "end_time": "2019-01-01T21:56:53.132860Z",
+     "start_time": "2019-01-01T21:56:53.111344Z"
     }
    },
    "outputs": [
@@ -112,19 +239,19 @@
        "      <th>id</th>\n",
        "      <th>it</th>\n",
        "      <th>imin</th>\n",
-       "      <th>qn1_obs</th>\n",
-       "      <th>qh_obs</th>\n",
+       "      <th>qn</th>\n",
+       "      <th>qh</th>\n",
        "      <th>qe</th>\n",
-       "      <th>qs_obs</th>\n",
-       "      <th>qf_obs</th>\n",
-       "      <th>avu1</th>\n",
+       "      <th>qs</th>\n",
+       "      <th>qf</th>\n",
+       "      <th>U</th>\n",
        "      <th>...</th>\n",
-       "      <th>snow_obs</th>\n",
-       "      <th>ldown_obs</th>\n",
-       "      <th>fcld_obs</th>\n",
-       "      <th>wu_m3</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>ldown</th>\n",
+       "      <th>fcld</th>\n",
+       "      <th>Wuh</th>\n",
        "      <th>xsmd</th>\n",
-       "      <th>lai_obs</th>\n",
+       "      <th>lai</th>\n",
        "      <th>kdiff</th>\n",
        "      <th>kdir</th>\n",
        "      <th>wdir</th>\n",
@@ -258,31 +385,31 @@
        "</div>"
       ],
       "text/plain": [
-       "                       iy  id  it  imin  qn1_obs  qh_obs     qe  qs_obs  \\\n",
-       "2012-01-01 00:05:00  2012   1   0     5   -999.0  -999.0 -999.0  -999.0   \n",
-       "2012-01-01 00:10:00  2012   1   0    10   -999.0  -999.0 -999.0  -999.0   \n",
-       "2012-01-01 00:15:00  2012   1   0    15   -999.0  -999.0 -999.0  -999.0   \n",
-       "2012-01-01 00:20:00  2012   1   0    20   -999.0  -999.0 -999.0  -999.0   \n",
-       "2012-01-01 00:25:00  2012   1   0    25   -999.0  -999.0 -999.0  -999.0   \n",
+       "                       iy  id  it  imin     qn     qh     qe     qs     qf  \\\n",
+       "2012-01-01 00:05:00  2012   1   0     5 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:10:00  2012   1   0    10 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:15:00  2012   1   0    15 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:20:00  2012   1   0    20 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:25:00  2012   1   0    25 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
        "\n",
-       "                     qf_obs   avu1  ...   snow_obs  ldown_obs  fcld_obs  \\\n",
-       "2012-01-01 00:05:00  -999.0  4.515  ...     -999.0     -999.0    -999.0   \n",
-       "2012-01-01 00:10:00  -999.0  4.515  ...     -999.0     -999.0    -999.0   \n",
-       "2012-01-01 00:15:00  -999.0  4.515  ...     -999.0     -999.0    -999.0   \n",
-       "2012-01-01 00:20:00  -999.0  4.515  ...     -999.0     -999.0    -999.0   \n",
-       "2012-01-01 00:25:00  -999.0  4.515  ...     -999.0     -999.0    -999.0   \n",
+       "                         U  ...    snow  ldown   fcld    Wuh   xsmd    lai  \\\n",
+       "2012-01-01 00:05:00  4.515  ...  -999.0 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:10:00  4.515  ...  -999.0 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:15:00  4.515  ...  -999.0 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:20:00  4.515  ...  -999.0 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
+       "2012-01-01 00:25:00  4.515  ...  -999.0 -999.0 -999.0 -999.0 -999.0 -999.0   \n",
        "\n",
-       "                     wu_m3   xsmd  lai_obs  kdiff   kdir   wdir  isec  \n",
-       "2012-01-01 00:05:00 -999.0 -999.0   -999.0 -999.0 -999.0 -999.0   0.0  \n",
-       "2012-01-01 00:10:00 -999.0 -999.0   -999.0 -999.0 -999.0 -999.0   0.0  \n",
-       "2012-01-01 00:15:00 -999.0 -999.0   -999.0 -999.0 -999.0 -999.0   0.0  \n",
-       "2012-01-01 00:20:00 -999.0 -999.0   -999.0 -999.0 -999.0 -999.0   0.0  \n",
-       "2012-01-01 00:25:00 -999.0 -999.0   -999.0 -999.0 -999.0 -999.0   0.0  \n",
+       "                     kdiff   kdir   wdir  isec  \n",
+       "2012-01-01 00:05:00 -999.0 -999.0 -999.0   0.0  \n",
+       "2012-01-01 00:10:00 -999.0 -999.0 -999.0   0.0  \n",
+       "2012-01-01 00:15:00 -999.0 -999.0 -999.0   0.0  \n",
+       "2012-01-01 00:20:00 -999.0 -999.0 -999.0   0.0  \n",
+       "2012-01-01 00:25:00 -999.0 -999.0 -999.0   0.0  \n",
        "\n",
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-29T15:59:15.537194Z",
-     "start_time": "2018-12-29T15:59:15.492613Z"
+     "end_time": "2019-01-01T21:56:55.703906Z",
+     "start_time": "2019-01-01T21:56:55.675784Z"
     }
    },
    "outputs": [
@@ -430,7 +557,7 @@
        "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-01-01 00:05:00</th>\n",
+       "      <th>2012-01-02 00:05:00</th>\n",
        "      <td>2</td>\n",
        "      <td>15.0</td>\n",
        "      <td>15.0</td>\n",
@@ -463,36 +590,36 @@
        "ind_dim                                            0   (0,)  (1,)   \n",
        "grid datetime                                                       \n",
        "1    2012-01-01 00:05:00                           2   15.0  15.0   \n",
-       "     2013-01-01 00:05:00                           2   15.0  15.0   \n",
+       "     2012-01-02 00:05:00                           2   15.0  15.0   \n",
        "\n",
        "var                      ah_slope_cooling      ah_slope_heating       \\\n",
        "ind_dim                              (0,) (1,)             (0,) (1,)   \n",
        "grid datetime                                                          \n",
        "1    2012-01-01 00:05:00              2.7  2.7              2.7  2.7   \n",
-       "     2013-01-01 00:05:00              2.7  2.7              2.7  2.7   \n",
+       "     2012-01-02 00:05:00              2.7  2.7              2.7  2.7   \n",
        "\n",
        "var                      ahprof_24hr                ...   wuprofm_24hr  \\\n",
        "ind_dim                       (0, 0) (0, 1) (1, 0)  ...        (20, 1)   \n",
        "grid datetime                                       ...                  \n",
        "1    2012-01-01 00:05:00        0.57   0.65   0.45  ...         -999.0   \n",
-       "     2013-01-01 00:05:00        0.57   0.65   0.45  ...         -999.0   \n",
+       "     2012-01-02 00:05:00        0.57   0.65   0.45  ...         -999.0   \n",
        "\n",
        "var                                                                       \\\n",
        "ind_dim                  (21, 0) (21, 1) (22, 0) (22, 1) (23, 0) (23, 1)   \n",
        "grid datetime                                                              \n",
        "1    2012-01-01 00:05:00  -999.0  -999.0  -999.0  -999.0  -999.0  -999.0   \n",
-       "     2013-01-01 00:05:00  -999.0  -999.0  -999.0  -999.0  -999.0  -999.0   \n",
+       "     2012-01-02 00:05:00  -999.0  -999.0  -999.0  -999.0  -999.0  -999.0   \n",
        "\n",
        "var                          z z0m_in zdm_in  \n",
        "ind_dim                      0      0      0  \n",
        "grid datetime                                 \n",
        "1    2012-01-01 00:05:00  10.0   0.01    0.2  \n",
-       "     2013-01-01 00:05:00  10.0   0.01    0.2  \n",
+       "     2012-01-02 00:05:00  10.0   0.01    0.2  \n",
        "\n",
        "[2 rows x 1200 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
