--- a/docs/source/tutorial/quickstart.ipynb
+++ b/docs/source/tutorial/quickstart.ipynb
@@ -22,8 +22,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:08:44.126795Z",
-     "start_time": "2019-01-01T21:08:43.505263Z"
+     "end_time": "2019-01-02T15:23:41.396809Z",
+     "start_time": "2019-01-02T15:23:40.589826Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:08:44.130292Z",
-     "start_time": "2019-01-01T21:08:44.128365Z"
+     "end_time": "2019-01-02T15:23:41.400341Z",
+     "start_time": "2019-01-02T15:23:41.398325Z"
     }
    },
    "outputs": [],
@@ -81,8 +81,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:08:45.752096Z",
-     "start_time": "2019-01-01T21:08:44.131733Z"
+     "end_time": "2019-01-02T15:23:43.050206Z",
+     "start_time": "2019-01-02T15:23:41.402125Z"
     }
    },
    "outputs": [],
@@ -102,8 +102,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:08:45.763287Z",
-     "start_time": "2019-01-01T21:08:45.753424Z"
+     "end_time": "2019-01-02T15:23:43.063659Z",
+     "start_time": "2019-01-02T15:23:43.051848Z"
     }
    },
    "outputs": [
@@ -230,8 +230,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:08:47.394961Z",
-     "start_time": "2019-01-01T21:08:45.764793Z"
+     "end_time": "2019-01-02T15:23:44.699366Z",
+     "start_time": "2019-01-02T15:23:43.065047Z"
     }
    },
    "outputs": [],
@@ -259,8 +259,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.645574Z",
-     "start_time": "2019-01-01T21:08:47.396616Z"
+     "end_time": "2019-01-02T15:23:59.777883Z",
+     "start_time": "2019-01-02T15:23:44.701258Z"
     }
    },
    "outputs": [],
@@ -286,8 +286,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.651879Z",
-     "start_time": "2019-01-01T21:09:02.647516Z"
+     "end_time": "2019-01-02T15:23:59.784164Z",
+     "start_time": "2019-01-02T15:23:59.780021Z"
     }
    },
    "outputs": [
@@ -325,8 +325,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.674675Z",
-     "start_time": "2019-01-01T21:09:02.653599Z"
+     "end_time": "2019-01-02T15:23:59.806363Z",
+     "start_time": "2019-01-02T15:23:59.785745Z"
     }
    },
    "outputs": [
@@ -798,8 +798,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.702104Z",
-     "start_time": "2019-01-01T21:09:02.676359Z"
+     "end_time": "2019-01-02T15:23:59.835165Z",
+     "start_time": "2019-01-02T15:23:59.808769Z"
     }
    },
    "outputs": [
@@ -1083,8 +1083,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.706456Z",
-     "start_time": "2019-01-01T21:09:02.703846Z"
+     "end_time": "2019-01-02T15:23:59.839570Z",
+     "start_time": "2019-01-02T15:23:59.836741Z"
     }
    },
    "outputs": [],
@@ -1106,8 +1106,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:02.745947Z",
-     "start_time": "2019-01-01T21:09:02.707995Z"
+     "end_time": "2019-01-02T15:23:59.883417Z",
+     "start_time": "2019-01-02T15:23:59.841059Z"
     }
    },
    "outputs": [
@@ -1243,15 +1243,15 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:03.623571Z",
-     "start_time": "2019-01-01T21:09:02.747343Z"
+     "end_time": "2019-01-02T15:24:00.769001Z",
+     "start_time": "2019-01-02T15:23:59.884955Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1337bb5f8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12d73e978>"
       ]
      },
      "execution_count": 12,
@@ -1290,8 +1290,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:03.660146Z",
-     "start_time": "2019-01-01T21:09:03.625454Z"
+     "end_time": "2019-01-02T15:24:00.807814Z",
+     "start_time": "2019-01-02T15:24:00.770917Z"
     }
    },
    "outputs": [],
@@ -1304,15 +1304,15 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:03.877161Z",
-     "start_time": "2019-01-01T21:09:03.661728Z"
+     "end_time": "2019-01-02T15:24:01.050559Z",
+     "start_time": "2019-01-02T15:24:00.809517Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x133905828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12d6e3978>"
       ]
      },
      "execution_count": 14,
@@ -1348,8 +1348,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:04.674226Z",
-     "start_time": "2019-01-01T21:09:03.879135Z"
+     "end_time": "2019-01-02T15:24:01.860631Z",
+     "start_time": "2019-01-02T15:24:01.052374Z"
     }
    },
    "outputs": [],
@@ -1372,8 +1372,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-01T21:09:08.101260Z",
-     "start_time": "2019-01-01T21:09:04.675867Z"
+     "end_time": "2019-01-02T15:24:05.282864Z",
+     "start_time": "2019-01-02T15:24:01.862153Z"
     }
    },
    "outputs": [],
