--- a/docs/source/data-structure/supy-io.ipynb
+++ b/docs/source/data-structure/supy-io.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:13.996456Z",
-     "start_time": "2019-01-02T22:13:54.919679Z"
+     "end_time": "2019-01-05T00:01:09.951135Z",
+     "start_time": "2019-01-05T00:00:50.359227Z"
     }
    },
    "outputs": [],
@@ -50,13 +50,9 @@
     "\n",
     "\n",
     "* Output:\n",
-    "  \n",
-    "  The output data by SuPy consists of two `DataFrame`s:\n",
+    "    The output data by SuPy consists of two `DataFrame`s:\n",
     "    * `df_output`: model output results; this is usually the basis for scientific analysis.\n",
-    "    * `df_state_final`: model final states; any of its entries can be used as a `df_state_init` to start another SuPy simulation.\n",
-    "  \n",
-    "\n",
-    "The details of these `DataFrame`s are provided below."
+    "    * `df_state_final`: model final states; any of its entries can be used as a `df_state_init` to start another SuPy simulation.\n"
    ]
   },
   {
@@ -78,8 +74,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.024588Z",
-     "start_time": "2019-01-02T22:14:13.998214Z"
+     "end_time": "2019-01-05T00:01:09.980045Z",
+     "start_time": "2019-01-05T00:01:09.952955Z"
     }
    },
    "outputs": [
@@ -250,8 +246,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.044003Z",
-     "start_time": "2019-01-02T22:14:14.026112Z"
+     "end_time": "2019-01-05T00:01:09.999818Z",
+     "start_time": "2019-01-05T00:01:09.981638Z"
     }
    },
    "outputs": [
@@ -404,8 +400,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.063435Z",
-     "start_time": "2019-01-02T22:14:14.045434Z"
+     "end_time": "2019-01-05T00:01:10.020104Z",
+     "start_time": "2019-01-05T00:01:10.001497Z"
     },
     "scrolled": false
    },
@@ -636,8 +632,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.068246Z",
-     "start_time": "2019-01-02T22:14:14.065032Z"
+     "end_time": "2019-01-05T00:01:10.025120Z",
+     "start_time": "2019-01-05T00:01:10.021642Z"
     }
    },
    "outputs": [
@@ -683,8 +679,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.092524Z",
-     "start_time": "2019-01-02T22:14:14.069785Z"
+     "end_time": "2019-01-05T00:01:10.050164Z",
+     "start_time": "2019-01-05T00:01:10.026533Z"
     }
    },
    "outputs": [
@@ -966,8 +962,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.097410Z",
-     "start_time": "2019-01-02T22:14:14.093886Z"
+     "end_time": "2019-01-05T00:01:10.055362Z",
+     "start_time": "2019-01-05T00:01:10.051584Z"
     }
    },
    "outputs": [
@@ -1008,8 +1004,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T22:14:14.121383Z",
-     "start_time": "2019-01-02T22:14:14.098831Z"
+     "end_time": "2019-01-05T00:01:10.079548Z",
+     "start_time": "2019-01-05T00:01:10.056876Z"
     }
    },
    "outputs": [
