added support to save results of supy run

--- a/docs/source/tutorial/impact-studies-parallel.ipynb
+++ b/docs/source/tutorial/impact-studies-parallel.ipynb
@@ -27,14 +27,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Prepare `supy` for the parallel mode"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### load `supy` and sample dataset"
    ]
@@ -46,7 +50,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T23:45:23.735061Z",
      "start_time": "2019-02-16T23:45:22.741096Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -87,7 +92,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T23:45:38.572844Z",
      "start_time": "2019-02-16T23:45:23.822836Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -99,21 +105,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Paralell setup for `supy` using `dask`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "In addition to the above packages, we also load `dask` to enable `supy` run in a parallel mode. Specifically, we will use [`dask.dataframe`](http://docs.dask.org/en/latest/dataframe.html), a specialized `dataframe` extending `pandas.DataFrame`'s ability in parallel operations, to implement a parallel `supy` for the impact studies in this tutorial."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Given the nature of impact studies that requires multiple independent models with selected parameters/variables varying across the setups, such simulations well fall into the scope of so-called [*embarrassingly parallel computation*](http://docs.dask.org/en/latest/use-cases.html#embarrassingly-parallel-computation) that is fully supported by `dask`. Also, as `supy` is readily built on the data structure `pandas.DataFrame`, we can fairly easily transfer it to the `dask` framework for parallel operations.\n",
     "\n",
@@ -129,7 +141,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:30:24.657118Z",
      "start_time": "2019-02-16T22:30:24.645491Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -160,7 +173,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "To demonstrate the parallelization, we simply duplicate the contents in `df_state_init` to make it seemingly large. Note we intentionally choose `24` as the number for copies to accompany the power of CPU.\n",
     "\n",
@@ -169,7 +184,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Baseline serial  run"
    ]
@@ -181,7 +198,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:30:48.087194Z",
      "start_time": "2019-02-16T22:30:24.933621Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -210,7 +228,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Parallel  run"
    ]
@@ -222,7 +242,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:30:55.777808Z",
      "start_time": "2019-02-16T22:30:48.711417Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -253,7 +274,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Check the data structure of  `xx_mp`:"
    ]
@@ -265,7 +288,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-08T09:05:57.462852Z",
      "start_time": "2019-02-08T09:05:57.429624Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -549,7 +573,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-06T00:28:11.252000Z",
      "start_time": "2019-01-06T00:28:11.248551Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "Perform a parallel run using `apply`:"
@@ -562,7 +587,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:31:08.428776Z",
      "start_time": "2019-02-16T22:30:58.416411Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -590,7 +616,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Check the data structure of  `xx_apply`.\n",
     "Note the difference in resulted data structure between `xx_apply` and `xx_mp`:"
@@ -603,7 +631,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:31:11.835927Z",
      "start_time": "2019-02-16T22:31:11.725491Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -628,7 +657,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Wrap up the above code into a function for easier use in multi-grid simulations"
    ]
@@ -640,7 +671,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-16T22:31:15.138074Z",
      "start_time": "2019-02-16T22:31:15.134770Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -660,7 +692,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Benchmark test\n",
