--- a/docs/source/tutorial/quick-start.ipynb
+++ b/docs/source/tutorial/quick-start.ipynb
@@ -284,7 +284,7 @@
     "\n",
     "* model configurations (e.g., stability; full details refer to [SUEWS documentation](https://suews-docs.readthedocs.io/en/latest/input_files/RunControl/RunControl.html))\n",
     "\n",
-    "Detailed description of variables in `df_state_init` refers to [SuPy input](../data-structure/supy-io.html#df_state_init:-model-initial-states)"
+    "Detailed description of variables in `df_state_init` refers to [SuPy input](../data-structure/supy-io.ipynb#df_state_init:-model-initial-states)"
    ]
   },
   {
@@ -470,7 +470,7 @@
     "\n",
     "`df_forcing` includes meteorological and other external forcing information.\n",
     "\n",
-    "Detailed description of variables in `df_forcing` refers to [SuPy input](../data-structure/supy-io.html#supy-io.rst#df_forcing:-forcing-data).\n",
+    "Detailed description of variables in `df_forcing` refers to [SuPy input](../data-structure/supy-io.ipynb#df_forcing:-forcing-data).\n",
     "\n",
     "Below is an overview of forcing variables of the sample data set used in the following simulations."
    ]
